adjust heading formatting

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -14,9 +14,9 @@
     background-color: white;
     display: flex;
     gap: 20px;
-    padding: 20px;
+    padding: 20px 70px 20px 70px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1;
     position: relative;
@@ -25,7 +25,7 @@
 
 .nav-bar-items{
     display: flex;
-    gap: 50px;
+    gap: 70px;
 }
 
 .title {
